--- a/generator-docs/generator.css
+++ b/generator-docs/generator.css
@@ -36,7 +36,9 @@ img {
   text-align: center;
   padding-left: 75%;
 }
-
+#submit {
+  font-family: 'Get Schwifty', sans-serif;
+}
 
 @font-face {
   font-family: 'Get Schwifty';
